include_directories ("${GME_INCLUDE_DIR}") 
include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/src") 

add_library(gme
    include/gme.h
    src/Ay_Apu.cpp
    src/Ay_Apu.h
    src/Ay_Core.cpp
    src/Ay_Core.h
    src/Ay_Cpu.cpp
    src/Ay_Emu.cpp
    src/Ay_Emu.h
    src/Blip_Buffer.cpp
    src/Blip_Buffer.h
    src/Blip_Buffer_impl.h
    src/Blip_Buffer_impl2.h
    src/Classic_Emu.cpp
    src/Classic_Emu.h
    src/Data_Reader.cpp
    src/Data_Reader.h
    src/Downsampler.cpp
    src/Downsampler.h
    src/Dual_Resampler.cpp
    src/Dual_Resampler.h
    src/Effects_Buffer.cpp
    src/Effects_Buffer.h
    src/Fir_Resampler.cpp
    src/Fir_Resampler.h
    src/Gb_Apu.cpp
    src/Gb_Apu.h
    src/Gb_Cpu.cpp
    src/Gb_Cpu.h
    src/Gb_Cpu_run.h
    src/Gb_Oscs.cpp
    src/Gb_Oscs.h
    src/Gbs_Core.cpp
    src/Gbs_Core.h
    src/Gbs_Cpu.cpp
    src/Gbs_Emu.cpp
    src/Gbs_Emu.h
    src/Gme_File.cpp
    src/Gme_File.h
    src/Gme_Loader.cpp
    src/Gme_Loader.h
    src/Gym_Emu.cpp
    src/Gym_Emu.h
    src/Hes_Apu.cpp
    src/Hes_Apu.h
    src/Hes_Apu_Adpcm.cpp
    src/Hes_Apu_Adpcm.h
    src/Hes_Core.cpp
    src/Hes_Core.h
    src/Hes_Cpu.cpp
    src/Hes_Cpu.h
    src/Hes_Cpu_run.h
    src/Hes_Emu.cpp
    src/Hes_Emu.h
    src/Kss_Core.cpp
    src/Kss_Core.h
    src/Kss_Cpu.cpp
    src/Kss_Emu.cpp
    src/Kss_Emu.h
    src/Kss_Scc_Apu.cpp
    src/Kss_Scc_Apu.h
    src/M3u_Playlist.cpp
    src/M3u_Playlist.h
    src/Multi_Buffer.cpp
    src/Multi_Buffer.h
    src/Music_Emu.cpp
    src/Music_Emu.h
    src/Nes_Apu.cpp
    src/Nes_Apu.h
    src/Nes_Cpu.cpp
    src/Nes_Cpu.h
    src/Nes_Cpu_run.h
    src/Nes_Fds_Apu.cpp
    src/Nes_Fds_Apu.h
    src/Nes_Fme7_Apu.cpp
    src/Nes_Fme7_Apu.h
    src/Nes_Mmc5_Apu.h
    src/Nes_Namco_Apu.cpp
    src/Nes_Namco_Apu.h
    src/Nes_Oscs.cpp
    src/Nes_Oscs.h
    src/Nes_Vrc6_Apu.cpp
    src/Nes_Vrc6_Apu.h
    src/Nes_Vrc7_Apu.cpp
    src/Nes_Vrc7_Apu.h
    src/Nsf_Core.cpp
    src/Nsf_Core.h
    src/Nsf_Cpu.cpp
    src/Nsf_Emu.cpp
    src/Nsf_Emu.h
    src/Nsf_Impl.cpp
    src/Nsf_Impl.h
    src/Nsfe_Emu.cpp
    src/Nsfe_Emu.h
    src/Opl_Apu.cpp
    src/Opl_Apu.h
    src/Resampler.cpp
    src/Resampler.h
    src/Rom_Data.cpp
    src/Rom_Data.h
    src/SPC_Filter.cpp
    src/SPC_Filter.h
    src/Sap_Apu.cpp
    src/Sap_Apu.h
    src/Sap_Core.cpp
    src/Sap_Core.h
    src/Sap_Cpu.cpp
    src/Sap_Emu.cpp
    src/Sap_Emu.h
    src/Sgc_Core.cpp
    src/Sgc_Core.h
    src/Sgc_Cpu.cpp
    src/Sgc_Emu.cpp
    src/Sgc_Emu.h
    src/Sgc_Impl.cpp
    src/Sgc_Impl.h
    src/Sms_Apu.cpp
    src/Sms_Apu.h
    src/Sms_Fm_Apu.cpp
    src/Sms_Fm_Apu.h
    src/Snes_Spc.cpp
    src/Snes_Spc.h
    src/Spc_Cpu.cpp
    src/Spc_Cpu.h
    src/Spc_Dsp.cpp
    src/Spc_Dsp.h
    src/Spc_Emu.cpp
    src/Spc_Emu.h
    src/Track_Filter.cpp
    src/Track_Filter.h
    src/Upsampler.cpp
    src/Upsampler.h
    src/Vgm_Core.cpp
    src/Vgm_Core.h
    src/Vgm_Emu.cpp
    src/Vgm_Emu.h
    src/Ym2413_Emu.cpp
    src/Ym2413_Emu.h
    src/Ym2612_Emu.cpp
    src/Ym2612_Emu.h
    src/Z80_Cpu.cpp
    src/Z80_Cpu.h
    src/Z80_Cpu_run.h
    src/blargg_common.cpp
    src/blargg_common.h
    src/blargg_config.h
    src/blargg_endian.h
    src/blargg_errors.cpp
    src/blargg_errors.h
    src/blargg_source.h
    src/divfix.h
    src/emu2413.cpp
    src/emu2413.h
    src/fmopl.cpp
    src/fmopl.h
    src/gme.cpp
    src/i_fmpac.h
    src/i_fmunit.h
    src/i_vrc7.h
    src/kmsnddev.h
    src/nestypes.h
    src/s_deltat.c
    src/s_deltat.h
    src/s_logtbl.c
    src/s_logtbl.h
    src/s_opl.c
    src/s_opl.h
    src/s_opltbl.c
    src/s_opltbl.h
    src/ym2413.c
    src/ym2413.h
    src/ymdeltat.cpp
    src/ymdeltat.h
)
